added edge case handling for the user service and tests